Quiz completo funcional

--- a/index.html
+++ b/index.html
@@ -14,11 +14,9 @@
         <div class="progress--bar"></div>
     </div>
 
-    <h1>Quiz</h1>
-
     <div class="questionArea">
         <div class="question">...</div>
-        <!-- Aqui terir uma div class='options' -->
+        <div class="options"></div>
     </div>
 
     <div class="scoreArea">
